admin tabs ui changes

--- a/src/main/resources/templates/admin-canteen.html
+++ b/src/main/resources/templates/admin-canteen.html
@@ -81,10 +81,10 @@
                     <div class="form-group">
                         <label for="category">Food Category:</label>
                         <select class="form-select" size="3" aria-label="size 3 select example" id="category">
-                            <option disabled>Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option disabled>Select Food Category</option>
+                            <option value="1">DRINK</option>
+                            <option value="2">SNACKS</option>
+                            <option value="3">MAIN_COURSE</option>
                         </select>
                     </div>
                     <div class="form-group">
