--- a/src/main/resources/templates/component/admin-booking-tab-component.html
+++ b/src/main/resources/templates/component/admin-booking-tab-component.html
@@ -1,4 +1,4 @@
-<admin-booking-tab-component>
+<admin-booking-tab-component xmlns:th="http://www.w3.org/1999/xhtml">
     <table class="table">
         <thead>
         <tr>
