--- a/src/main/resources/templates/component/admin-canteen-tab-component.html
+++ b/src/main/resources/templates/component/admin-canteen-tab-component.html
@@ -1,5 +1,4 @@
-
-<admin-canteen-tab-component>
+<admin-canteen-tab-component xmlns:th="http://www.w3.org/1999/xhtml">
     <table class="table">
         <thead>
         <tr>
