--- a/src/main/resources/templates/room-booking.html
+++ b/src/main/resources/templates/room-booking.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="guests">Number of Guests:</label>
-                                <input type="number" id="guests" name="guests" class="form-control" min="1" required>
+                                <input type="number" id="guests" name="guests" class="form-control" min="1" placeholder="Scroll up to add guest" required>
                             </div>
                             <div class="form-group">
                                 <label for="checkIn">Check-in Date:</label>
