--- a/src/main/resources/templates/admin-bookings.html
+++ b/src/main/resources/templates/admin-bookings.html
@@ -32,6 +32,7 @@
         <div class="report-container">
             <div class="container">
                 <div class="container">
+                    <div th:replace="~{component/admin-booking-tab-component :: admin-booking-tab-component}"></div>
 
                 </div>
             </div>
