--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,
-				initial-scale=1.0">
+				initial-scale=1.0"
+    >
     <title>Hotella</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <script type="text/javascript" src="js/feedback.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,17 +36,48 @@
                 <div class="container">
                     <h1>Feedback Form</h1>
                     <form action="/feedback-output" method="post"  modelAttribute="feedback">
-                        <label for="name">Your Name:</label><br>
-                        <input type="text" id="name" name="name"  required><br><br>
+                        <label for="name" >Your Name:</label><br>
+                        <input type="text" id="name" name="name" placeholder="Enter your Name" required><br><br>
 
-                        <label for="comment">Your Feedback:</label><br>
-                        <textarea id="comment" name="comment"  required></textarea><br><br>
-                     <!--   <button><a th:href="feedback-output" style="text-decoration:none">Submit Feedback</a></button>  -->
+                <!--        <label for="comment">Your Feedback:</label><br>
+                        <textarea id="comment" name="comment" placeholder="Enter your Comment" required></textarea><br><br>
+                      -->
+                        <div class="form-group">
+                            <label for="comment">Your Review:</label>
+                            <textarea class="form-control" id="comment" name="comment" placeholder="Your Review about Hotel!" rows="2"></textarea>
+                        </div>
+
+                        <div class="mb">
+                            <label class="form-label">Your Rating</label>
+                            <!-- Star Rating -->
+                            <div class="rating">
+                                <input type="radio" id="star1" name="rating" value="1"/>
+                                <label for="star1" title="1 star"><i class="fas fa-star"></i></label>
+                                <input type="radio" id="star2" name="rating" value="2"/>
+                                <label for="star2" title="2 stars"><i class="fas fa-star"></i></label>
+                                <input type="radio" id="star3" name="rating" value="3"/>
+                                <label for="star3" title="3 stars"><i class="fas fa-star"></i></label>
+                                <input type="radio" id="star4" name="rating" value="4"/>
+                                <label for="star4" title="4 stars"><i class="fas fa-star"></i></label>
+                                <input type="radio" id="star5" name="rating" value="5"/>
+                                <label for="star5" title="5 stars"><i class="fas fa-star"></i></label>
+                            </div>
+                            <!-- End Star Rating -->
+                        </div>
                         <button type="submit">Submit Feedback</button>
                     </form>
+                    <div class="row">
+                        <div class="col recent-ratings">
+                            <h2>Recent Ratings</h2>
+                            <div th:each="rating : ${ratings}">
+                                <p th:text="${rating.name} + ' rated ' + ${rating.rating} + ' stars'"></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
