--- a/src/main/resources/templates/admin-canteen.html
+++ b/src/main/resources/templates/admin-canteen.html
@@ -8,6 +8,7 @@
 				initial-scale=1.0">
     <title>Hotella</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/app.js"></script>
     <!-- Bootstrap JS and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -61,7 +62,7 @@
 <div class="modal fade" id="foodModalLong" tabindex="-1" aria-labelledby="foodModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" >
         <!--                add food form-->
-        <form action="/admin-canteen/food" method="post"  modelAttribute="food">
+        <form id="foodForm" >
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="foodModalLongTitle">Add food</h5>
@@ -81,10 +82,7 @@
                     <div class="form-group">
                         <label for="category">Food Category:</label>
                         <select class="form-select" size="3" aria-label="size 3 select example" id="category">
-                            <option disabled>Select Food Category</option>
-                            <option value="1">DRINK</option>
-                            <option value="2">SNACKS</option>
-                            <option value="3">MAIN_COURSE</option>
+                            <option th:each="category : ${foodCategories}" th:value="${category.id}" th:text="${category.name}"  >Select Food Category</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -95,7 +93,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button onclick="addFood()" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </form>
@@ -105,7 +103,7 @@
 <!-- add food category Modal -->
 <div class="modal fade" id="foodCategoryModalLong" tabindex="-1" aria-labelledby="foodCategoryModalLongTitle" aria-hidden="true">
     <!--                food category form-->
-    <form action="/admin-foodcategory/add" method="post"  modelAttribute="foodCategory">
+    <form>
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -122,7 +120,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button onclick="addFood(this.form)" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </div>
