--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -8,6 +8,7 @@
 				initial-scale=1.0">
     <title>Hotella</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/app.js"></script>
     <!-- Bootstrap JS and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -52,7 +53,7 @@
 <div class="modal fade" id="roomModalLong" tabindex="-1" role="dialog" aria-labelledby="roomModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form action="/room/type/add" method="post"  modelAttribute="roomType">
+            <form id="roomForm" >
                 <div class="modal-header">
                     <h5 class="modal-title" id="roomModalLongTitle">Add room type</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -78,6 +79,10 @@
                         <input type="number" class="form-control" id="dailyRent" placeholder="Enter Price">
                     </div>
                     <div class="form-group">
+                        <label for="maxGuestCount">Daily Rent:</label>
+                        <input type="number" class="form-control" id="maxGuestCount" placeholder="Max guest count">
+                    </div>
+                    <div class="form-group">
                         <label for="roomCount">No of available rooms:</label>
                         <input type="number" class="form-control" id="roomCount" placeholder="Enter number of available rooms.">
                     </div>
@@ -85,7 +90,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button onclick="" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
