--- a/src/main/resources/templates/admin-canteen.html
+++ b/src/main/resources/templates/admin-canteen.html
@@ -8,7 +8,7 @@
 				initial-scale=1.0">
     <title>Hotella</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/app.js"></script>
+    <script src="js/canteen-app.js"></script>
     <!-- Bootstrap JS and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -73,27 +73,27 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Food Name:</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter Food Name">
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter Food Name">
                     </div>
                     <div class="form-group">
                         <label for="description">Description:</label>
-                        <textarea class="form-control" id="description" rows="3"></textarea>
+                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="category">Food Category:</label>
-                        <select class="form-select" size="3" aria-label="size 3 select example" id="category">
+                        <label for="categoryId">Food Category:</label>
+                        <select class="form-select" size="3" aria-label="size 3 select example" name="categoryId" id="categoryId">
                             <option th:each="category : ${foodCategories}" th:value="${category.id}" th:text="${category.name}"  >Select Food Category</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="price">Price:</label>
-                        <input type="text" class="form-control" id="price" placeholder="Enter Price">
+                        <input type="text" class="form-control" name="price" id="price" placeholder="Enter Price">
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button onclick="addFood()" class="btn btn-primary">Save changes</button>
+                    <button onclick="addFood(event, form)" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
         </form>
