--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -8,7 +8,7 @@
 				initial-scale=1.0">
     <title>Hotella</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/app.js"></script>
+    <script src="js/room-app.js"></script>
     <!-- Bootstrap JS and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -63,34 +63,34 @@
                 <div class="modal-body">
                     <!--                room form-->
                     <div class="form-group">
-                        <label for="type">Room Type:</label>
-                        <input type="text" class="form-control" id="type" placeholder="Enter New Room Type">
+                        <label for="name">Room Type:</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter New Room Type">
                     </div>
                     <div class="form-group">
                         <label for="description">Description:</label>
-                        <textarea class="form-control" id="description" rows="3"></textarea>
+                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="photo">Photo:</label>
-                        <input type="file" class="form-control-file" id="photo">
-                    </div>
+<!--                    <div class="form-group">-->
+<!--                        <label for="photo">Photo:</label>-->
+<!--                        <input type="file" class="form-control-file" id="photo" name="photo">-->
+<!--                    </div>-->
                     <div class="form-group">
                         <label for="dailyRent">Daily Rent:</label>
-                        <input type="number" class="form-control" id="dailyRent" placeholder="Enter Price">
+                        <input type="number" class="form-control" id="dailyRent" name="dailyRent" placeholder="Enter Price">
                     </div>
                     <div class="form-group">
-                        <label for="maxGuestCount">Daily Rent:</label>
-                        <input type="number" class="form-control" id="maxGuestCount" placeholder="Max guest count">
+                        <label for="maxGuestCount">Max guest count:</label>
+                        <input type="number" class="form-control" id="maxGuestCount" name="maxGuestCount" placeholder="Max guest count">
                     </div>
                     <div class="form-group">
                         <label for="roomCount">No of available rooms:</label>
-                        <input type="number" class="form-control" id="roomCount" placeholder="Enter number of available rooms.">
+                        <input type="number" class="form-control" id="roomCount" name="roomCount" placeholder="Enter number of available rooms.">
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button onclick="" class="btn btn-primary">Save changes</button>
+                    <button onclick="addRoom(event, form)" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
