confirm password field added

--- a/src/main/resources/templates/room-booking-summary.html
+++ b/src/main/resources/templates/room-booking-summary.html
@@ -35,7 +35,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h2 class="card-title mb-4">Room Booking</h2>
-                            <form action="/feedback" method="get" id="bookingForm">
+                            <form action="/admin-booking" method="get" id="bookingForm">
                                 <table class="table-border">
                                     <tr>
                                         <th> Selected Room type:</th>
