--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -65,6 +65,12 @@
                             <p th:errors="*{password}" class="text-danger" th:if="${#fields.hasErrors('password')}">
                             </p>
                         </div>
+                        <div class="form-group mb-3">
+                            <label class="form-label">Confirm Password</label>
+                            <input class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm password"
+                                   th:field="*{confirmPassword}" type="password" />
+                            <p th:errors="*{confirmPassword}" class="text-danger" th:if="${#fields.hasErrors('confirmPassword')}"></p>
+                        </div>
 
                         <div class="form-group mb-3">
                             <button class="btn btn-primary" type="submit">Register</button>
