--- a/src/main/resources/templates/admin-canteen.html
+++ b/src/main/resources/templates/admin-canteen.html
@@ -73,7 +73,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Food Name:</label>
-                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter Food Name">
+                        <input type="text" class="form-control" name="name" id="name" placeholder="Enter Food Name" required>
                     </div>
                     <div class="form-group">
                         <label for="description">Description:</label>
@@ -81,13 +81,13 @@
                     </div>
                     <div class="form-group">
                         <label for="categoryId">Food Category:</label>
-                        <select class="form-select" size="3" aria-label="size 3 select example" name="categoryId" id="categoryId">
+                        <select class="form-select" size="3" aria-label="size 3 select example" name="categoryId" id="categoryId" required>
                             <option th:each="category : ${foodCategories}" th:value="${category.id}" th:text="${category.name}"  >Select Food Category</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="price">Price:</label>
-                        <input type="text" class="form-control" name="price" id="price" placeholder="Enter Price">
+                        <input type="number" class="form-control" name="price" id="price" placeholder="Enter Price" required>
                     </div>
 
                 </div>
@@ -115,7 +115,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="foodCategory">Food Category:</label>
-                        <input type="text" class="form-control" id="foodCategory" placeholder="Enter New Food Category">
+                        <input type="text" class="form-control" id="foodCategory" placeholder="Enter New Food Category" required>
                     </div>
                 </div>
                 <div class="modal-footer">
