--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -33,6 +33,10 @@
         <div class="report-container">
             <div class="container">
                 <div class="container">
+                    <div th:if="${isRoomAdded}">
+                        <div class="alert alert-info">You've successfully registered
+                            to our app!</div>
+                    </div>
                     <div class="tab-content mt-3" style="display: flex; flex-direction: column;">
                         <!-- Button trigger add food modal -->
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#roomModalLong" style="align-self: end;">
@@ -53,7 +57,7 @@
 <div class="modal fade" id="roomModalLong" tabindex="-1" role="dialog" aria-labelledby="roomModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form id="roomForm" >
+            <form method="post" id="roomForm" action="/admin-room" >
                 <div class="modal-header">
                     <h5 class="modal-title" id="roomModalLongTitle">Add room type</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -90,7 +94,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button onclick="addRoom(event, form)" class="btn btn-primary">Save changes</button>
+<!--                    <button onclick="addRoom(event, form)" class="btn btn-primary">Save changes</button>-->
+                    <button type="submit" class="btn btn-primary">Save changes</button>
                 </div>
             </form>
         </div>
