--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -74,10 +74,10 @@
                         <label for="description">Description:</label>
                         <textarea class="form-control" id="description" name="description" rows="3"></textarea>
                     </div>
-<!--                    <div class="form-group">-->
-<!--                        <label for="photo">Photo:</label>-->
-<!--                        <input type="file" class="form-control-file" id="photo" name="photo">-->
-<!--                    </div>-->
+                    <div class="form-group">
+                        <label for="photo">Photo:</label>
+                        <input type="file" class="form-control-file" id="photo" name="photo">
+                    </div>
                     <div class="form-group">
                         <label for="dailyRent">Daily Rent:</label>
                         <input type="number" class="form-control" id="dailyRent" name="dailyRent" placeholder="Enter Price">
