--- a/src/main/resources/templates/canteen.html
+++ b/src/main/resources/templates/canteen.html
@@ -58,6 +58,30 @@
                         </tr>
                         </tbody>
                     </table>
+                 <div class="card-header">
+                     <h2 class="text-center">Food Order History</h2>
+                 </div>
+                 <div class="card-body">
+                     <div class="table-responsive">
+                         <table class="table table-striped">
+                             <thead>
+                             <tr>
+                                 <th>Food</th>
+                                 <th>Food Category</th>
+                                 <th>Price</th>
+
+                             </tr>
+                             </thead>
+                             <!--       <tbody>
+                                <tr th:each="booking : ${user.roomBookings}">
+                                      <td th:text="${booking.roomName}"></td>
+                                      <td th:text="${booking.checkInDate}"></td>
+                                      <td th:text="${booking.checkOutDate}"></td>
+                                  </tr>
+                             </tbody>    -->
+                         </table>
+                     </div>
+                 </div>
                 </div>
             </div>
         </div>
