saved room images in db

--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -57,7 +57,7 @@
 <div class="modal fade" id="roomModalLong" tabindex="-1" role="dialog" aria-labelledby="roomModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form method="post" id="roomForm" action="/admin-room" >
+            <form method="post" id="roomForm" action="/admin-room" enctype="multipart/form-data" >
                 <div class="modal-header">
                     <h5 class="modal-title" id="roomModalLongTitle">Add room type</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
